# telegram-gpt-php-translator-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.json  bot.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci-pr.yml  ci-push.yml  ci.yml
handlers/: commands.py  documents.py  language.py
services/: chunker.py  translator.py
src/: main.py
src/handlers/: __init__.py  translate_handler.py
src/telegram_gpt_php_translator_bot/: config.py  main.py  states.py
src/telegram_gpt_php_translator_bot/handlers/: lang_input_handler.py  start_handler.py  translate_handler.py
src/telegram_gpt_php_translator_bot/services/: openai_service.py  parser_service.py  progress_service.py
tests/: test_openai_service.py  test_parser_service.py
utils/: validators.py
webhook/: server.py
